[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Themes/PirateTheme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.52549, 0.501961, 1, 0.588235 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="P1Health" type="ProgressBar" parent="Control"]
margin_left = 32.0
margin_top = 14.0
margin_right = 128.0
margin_bottom = 28.0
theme = ExtResource( 2 )
value = 100.0

[node name="P2Health" type="ProgressBar" parent="Control"]
margin_left = 384.0
margin_top = 14.0
margin_right = 480.0
margin_bottom = 28.0
theme = ExtResource( 2 )
custom_styles/fg = SubResource( 1 )
value = 100.0

[node name="P1" type="Label" parent="Control"]
margin_left = 32.0
margin_right = 83.0
margin_bottom = 14.0
text = "Player 1"

[node name="P2" type="Label" parent="Control"]
margin_left = 384.0
margin_right = 435.0
margin_bottom = 14.0
text = "Player 2"

[node name="P1Win" type="Label" parent="."]
visible = false
margin_left = 192.0
margin_top = 224.0
margin_right = 283.0
margin_bottom = 238.0
text = "Player 1 Wins!"

[node name="P2Win" type="Label" parent="."]
visible = false
margin_left = 192.0
margin_top = 224.0
margin_right = 283.0
margin_bottom = 238.0
text = "Player 1 Wins!"

[node name="PlayAgain" type="Button" parent="."]
visible = false
margin_left = 160.0
margin_top = 320.0
margin_right = 352.0
margin_bottom = 384.0
theme = ExtResource( 2 )
text = "Play Again?"
